# plainlabs

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml
docs/: PRD.md
evals/golden/: report_basic.txt  report_tiny.txt
packs/: alt.yaml  ast.yaml  bilirubin_total.yaml  creatinine.yaml  glucose_fasting.yaml  hba1c.yaml  hdl.yaml  hemoglobin.yaml  ldl.yaml  platelets.yaml  potassium.yaml  sodium.yaml  t4.yaml  total_cholesterol.yaml  triglycerides.yaml  tsh.yaml  urea.yaml  vitamin_b12.yaml  vitamin_d.yaml  wbc.yaml
plainlabs/: __main__.py  bootstrap.py  config.py  graph.py  llm.py  packs.py  safety.py
plainlabs/skills/: chat.py  explain.py  normalize.py  parse.py  profile.py
plainlabs/tools/: extract.py
tests/: test_safety.py
